@@ -1,6 +1,14 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  21 Aug 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Each dhcp client now supports global options - ie dhcpcd="-a"
+
+    Classical IP over ATM support has been added, #108153 thanks to
+    Giampaolo Tomassoni. Note that he will not support the module and no
+    Gentoo devs have the hardware so any bugs reported may take time to fix.
+
   18 Aug 2006; Roy Marples <uberlord@gentoo.org>:
 
     Don't stop services that are depended on by coldplugged services.
